--- a/CustomStyleExample/customstyleexample.ui
+++ b/CustomStyleExample/customstyleexample.ui
@@ -13,37 +13,673 @@
   <property name="windowTitle">
    <string>CustomStyleExample</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QWidget
+{
+	background-color:#fff;
+}
+/*QPushButton*/
+QPushButton
+{
+	border:1px solid transparent;
+	border-radius:4px;
+	color: #333;
+    background-color: #fff;
+	border-color: #ccc;
+	font-size: 14px;
+	font-weight: 400;
+	min-height:28px;
+}
+QPushButton:hover
+{
+	background-color:#e6e6e6;
+	border-color:#adadad;
+}
+QPushButton:pressed,QPushButton:checked
+{
+	background-color:#d6d6d6;
+	border-color:#8c8c8c;
+}
+QPushButton[type=primary]
+{
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+}
+QPushButton[type=primary]:hover
+{
+	background-color: #204d74;
+    border-color: #122b40;
+}
+QPushButton[type=primary]:pressed,QPushButton[type=primary]:checked
+{
+	background-color: #204d74;
+    border-color: #122b40;
+}
+QPushButton[type=success]
+{
+    color: #fff;
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+}
+QPushButton[type=success]:hover
+{
+    background-color: #449d44;
+    border-color: #398439;
+}
+QPushButton[type=success]:pressed,QPushButton[type=success]:checked
+{
+	background-color: #398439;
+    border-color: #255625;
+}
+QPushButton[type=info]
+{
+    color: #fff;
+    background-color: #5bc0de;
+    border-color: #46b8da;
+}
+QPushButton[type=info]:hover
+{
+    background-color: #31b0d5;
+    border-color: #269abc;
+}
+QPushButton[type=info]:pressed,QPushButton[type=info]:checked
+{
+	background-color: #269abc;
+    border-color: #1b6d85;
+}
+QPushButton[type=warning]
+{
+    color: #fff;
+    background-color: #f0ad4e;
+    border-color: #eea236;
+}
+QPushButton[type=warning]:hover
+{
+    background-color: #ec971f;
+    border-color: #d58512;
+}
+QPushButton[type=warning]:pressed,QPushButton[type=warning]:checked
+{
+	background-color: #d58512;
+    border-color: #985f0d;
+}
+QPushButton[type=danger]
+{
+    color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+}
+QPushButton[type=danger]:hover
+{
+    background-color: #c9302c;
+    border-color: #ac2925;
+}
+QPushButton[type=danger]:pressed,QPushButton[type=danger]:checked
+{
+	background-color: #ac2925;
+    border-color: #761c19;
+}
+/*QComboBox*/
+QComboBox
+{
+	border:1px solid transparent;
+	border-radius:4px;
+	color: #333;
+    background-color: #fff;
+	border-color: #ccc;
+	font-size: 14px;
+	font-weight: 400;
+	min-height:28px;
+}
+QComboBox::down-arrow {
+    image: url(Resources/images/down-arrow-black.png);
+	width:12px;
+}
+QComboBox[type=primary]::down-arrow ,QComboBox[type=success]::down-arrow ,QComboBox[type=info]::down-arrow,QComboBox[type=warning]::down-arrow,QComboBox[type=danger]::down-arrow{
+    image: url(Resources/images/down-arrow-white.png);
+}
+
+QComboBox::down-arrow:on { /* shift the arrow when popup is open */
+    top: 1px;
+    left: 1px;
+}
+QComboBox::drop-down
+{
+    width: 28px;
+	border-left: 1px solid #ccc;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+QComboBox:hover
+{
+	background-color:#e6e6e6;
+	border-color:#adadad;
+}
+QComboBox:pressed,QComboBox:checked
+{
+	background-color:#d6d6d6;
+	border-color:#8c8c8c;
+}
+QComboBox[type=primary]
+{
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+}
+QComboBox[type=primary]:hover
+{
+	background-color: #204d74;
+    border-color: #122b40;
+}
+QComboBox[type=primary]:pressed,QComboBox[type=primary]:checked
+{
+	background-color: #204d74;
+    border-color: #122b40;
+}
+QComboBox[type=primary]::drop-down
+{
+    width: 28px;
+	border-left: 1px solid #2e6da4;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+QComboBox[type=success]
+{
+    color: #fff;
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+}
+QComboBox[type=success]:hover
+{
+    background-color: #449d44;
+    border-color: #398439;
+}
+QComboBox[type=success]:pressed,QComboBox[type=success]:checked
+{
+	background-color: #398439;
+    border-color: #255625;
+}
+QComboBox[type=success]::drop-down
+{
+    width: 28px;
+	border-left: 1px solid #4cae4c;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+QComboBox[type=info]
+{
+    color: #fff;
+    background-color: #5bc0de;
+    border-color: #46b8da;
+}
+QComboBox[type=info]:hover
+{
+    background-color: #31b0d5;
+    border-color: #269abc;
+}
+QComboBox[type=info]:pressed,QComboBox[type=info]:checked
+{
+	background-color: #269abc;
+    border-color: #1b6d85;
+}
+QComboBox[type=info]::drop-down
+{
+    width: 28px;
+	border-left: 1px solid #46b8da;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+QComboBox[type=warning]
+{
+    color: #fff;
+    background-color: #f0ad4e;
+    border-color: #eea236;
+}
+QComboBox[type=warning]:hover
+{
+    background-color: #ec971f;
+    border-color: #d58512;
+}
+QComboBox[type=warning]:pressed,QComboBox[type=warning]:checked
+{
+	background-color: #d58512;
+    border-color: #985f0d;
+}
+QComboBox[type=warning]::drop-down
+{
+    width: 28px;
+	border-left: 1px solid #eea236;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+QComboBox[type=danger]
+{
+    color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+}
+QComboBox[type=danger]:hover
+{
+    background-color: #c9302c;
+    border-color: #ac2925;
+}
+QComboBox[type=danger]:pressed,QComboBox[type=danger]:checked
+{
+	background-color: #ac2925;
+    border-color: #761c19;
+}
+QComboBox[type=danger]::drop-down
+{
+    width: 28px;
+	border-left: 1px solid #d43f3a;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+QComboBox QAbstractItemView
+{
+	border: 1px solid #ccc;
+	selection-background-color: #f5f5f5;
+	background-color:#fff;
+	outline:none;
+}
+QComboBox QListView::item
+{
+	height:26px;
+	color:#000;
+	background-color:#fff;
+	padding-left:20px;
+}
+QComboBox QListView::item:hover
+{
+	color:#000;
+	background-color:#f5f5f5;
+}
+/*QGroupBox*/
+QGroupBox
+{
+	border:1px solid #ccc;
+	margin-top: 7px;
+	padding-top:7px;
+	border-radius:4px;
+}
+QGroupBox::title
+{
+	font-size:14px;
+	subcontrol-origin: border;
+	top:-7px;
+	left:-3px;
+    subcontrol-position:top center; /* position at the top center */
+}
+</string>
+  </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QSpinBox" name="spinBox">
+   <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>140</y>
-      <width>161</width>
-      <height>51</height>
+      <x>10</x>
+      <y>10</y>
+      <width>131</width>
+      <height>211</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="title">
+     <string>QPushButtons</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <property name="spacing">
+      <number>1</number>
+     </property>
+     <property name="leftMargin">
+      <number>3</number>
+     </property>
+     <property name="topMargin">
+      <number>3</number>
+     </property>
+     <property name="rightMargin">
+      <number>3</number>
+     </property>
+     <property name="bottomMargin">
+      <number>3</number>
+     </property>
+     <item>
+      <widget class="QPushButton" name="pushButton">
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <property name="text">
+        <string>Default</string>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <property name="text">
+        <string>Primary</string>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string>primary</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_3">
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <property name="text">
+        <string>Success</string>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string>success</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_4">
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <property name="text">
+        <string>Info</string>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string>info</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_5">
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <property name="text">
+        <string>Warning</string>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string>warning</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_6">
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <property name="text">
+        <string>Danger</string>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string>danger</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_2">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>10</y>
+      <width>151</width>
+      <height>211</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="title">
+     <string>Drop down combo box</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <property name="spacing">
+      <number>1</number>
+     </property>
+     <property name="leftMargin">
+      <number>3</number>
+     </property>
+     <property name="topMargin">
+      <number>3</number>
+     </property>
+     <property name="rightMargin">
+      <number>3</number>
+     </property>
+     <property name="bottomMargin">
+      <number>3</number>
+     </property>
+     <item>
+      <widget class="QComboBox" name="comboBox">
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <property name="editable">
+        <bool>false</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string/>
+       </property>
+       <item>
+        <property name="text">
+         <string>Default</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="comboBox_2">
+       <property name="editable">
+        <bool>false</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string>primary</string>
+       </property>
+       <item>
+        <property name="text">
+         <string>Primary</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="comboBox_3">
+       <property name="editable">
+        <bool>false</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string>success</string>
+       </property>
+       <item>
+        <property name="text">
+         <string>Success</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="comboBox_4">
+       <property name="editable">
+        <bool>false</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string>info</string>
+       </property>
+       <item>
+        <property name="text">
+         <string>Info</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="comboBox_5">
+       <property name="editable">
+        <bool>false</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string>warning</string>
+       </property>
+       <item>
+        <property name="text">
+         <string>Warning</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="comboBox_6">
+       <property name="editable">
+        <bool>false</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string>danger</string>
+       </property>
+       <item>
+        <property name="text">
+         <string>Danger</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>---------</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>新建项目</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>600</width>
-     <height>23</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-  </widget>
-  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
